# context-eng-project

./: .gitignore  README.md  pyproject.toml  ralph_mcp_v2.sh  ralph_mcp_v3.sh  ralph_migrate.sh  ralph_rf_self_contained.sh
.cursor/: mcp.json
.cursor/commands/: context.md
.cursor/rules/: context-eng-mcp.mdc
benchmarks/: BASELINE.md  __init__.py  baseline.py  compare.py  queries.yaml  query_loader.py  run_mcp.py
benchmarks/fixture_repo/: README.md  pyproject.toml
benchmarks/fixture_repo/src/api/: __init__.py  routes.py  server.py
benchmarks/fixture_repo/src/auth/: __init__.py  middleware.py  refresh.py  tokens.py
benchmarks/fixture_repo/src/billing/: __init__.py  invoice.py  payment.py
benchmarks/fixture_repo/src/inventory/: __init__.py  catalog.py  stock.py
benchmarks/fixture_repo/src/platform/: __init__.py  commerce.py  compliance.py  configuration.py  data_pipeline.py  identity.py  inventory_ops.py  mega_agent_context.py  mega_compliance_security.py  mega_enterprise_architecture.py  mega_full_stack_review.py  mega_identity_commerce.py  mega_incident_response.py  mega_inventory_workflow.py  mega_observability_config.py  mega_performance_ml.py  mega_quality_governance.py  mega_rollout_migration.py  mega_token_ceiling.py  migration.py  observability.py  performance.py  resilience.py  rollout.py  security_review.py  testing_matrix.py  workflow.py
benchmarks/fixture_repo/src/users/: __init__.py  models.py  service.py
benchmarks/fixture_repo/src/utils/: __init__.py  config.py  logging.py
benchmarks/fixture_repo/tests/: test_auth.py  test_billing.py  test_users.py
docs/: notes.md
docs/tutorials/: ml-budget-prediction.md
ml/data/: budget_labels.jsonl  budget_labels.jsonl.bak  budget_training_queries.yaml  budget_training_queries.yaml.bak  corpus_targets.yaml  embedding_eval_queries.yaml  eval_targets.yaml  task_eval_queries.yaml
ml/models/: budget_rf_v2.joblib
ml/prd/: mcp_v2_roadmap.md  mcp_v2_roadmap.prd.json  mcp_v3_quality_retrieval.md  mcp_v3_quality_retrieval.prd.json  rf_only_self_contained.prd.json
ml/prompts/: fix_mcp_v2.md  fix_mcp_v3.md  fix_rf_eval.md  generate_training_query.md
ml/reports/: budget_rf_tree  mcp_v2_status.md  mcp_v3_status.md  ralph_migrate.log.bak  rf_eval.md
ml/scripts/: corpus_gap.py  merge_incoming_queries.py  prune_unachievable_anchors.py  sweep_reduction.py  validate_ab_benchmark.sh  validate_anchor_recall.sh  validate_anchor_retention.sh  validate_corpus.sh  validate_cv.sh  validate_mcp_v2_gates.sh  validate_mcp_v3_gates.sh  validate_p90_latency.sh  validate_rf_gates.sh  validate_rf_self_contained_gates.sh  validate_token_reduction.sh
scripts/: build_swebench_budget_dataset.py  install.ps1  train_budget_rf.py
src/context_eng/: __init__.py  config.py  engine.py  formatting.py  models.py  server.py  workspace.py  workspace_resolve.py
src/context_eng/anchors/: __init__.py  discovery.py  fit.py
src/context_eng/budget/: __init__.py  policy.py
src/context_eng/eval/: __init__.py  quality.py
src/context_eng/index/: __init__.py  cli.py  manifest.py
src/context_eng/intent/: __init__.py  budgets.py  classifier.py
src/context_eng/logging/: __init__.py  store.py
src/context_eng/ml/: budget_model.py  engine_budget.py  eval_rf.py  features.py  generate_labels.py  swebench_labels.py  train_budget.py  visualize_eval.py  visualize_forest.py
src/context_eng/packing/: __init__.py  adaptive.py
src/context_eng/ranking/: __init__.py  ranker.py
src/context_eng/retrieval/: __init__.py  anchor_inference.py  base.py  composite_retriever.py  embedding_retriever.py  grep_retriever.py  import_graph.py  symbol_slice.py
src/context_eng/tokens/: __init__.py  estimator.py
tests/: test_adaptive_optional.py  test_anchor_fit.py  test_anchor_inference.py  test_benchmark.py  test_bundle.py  test_embedding_retriever.py  test_formatting.py  test_grep_retriever.py  test_intent.py  test_manifest.py  test_ml_budget.py  test_quality_eval.py  test_ranker.py  test_rf_eval.py  test_server.py  test_swebench_labels.py  test_visualize_forest.py
