[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-eng"
version = "0.1.0"
description = "Context Engineering MCP server: query-matched, budgeted context packs to reduce LLM token usage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.5"]
ml = [
    "joblib>=1.3",
    "scikit-learn>=1.3",
]
viz = [
    "dtreeviz>=2.2",
    "graphviz>=0.20",
]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "tiktoken>=0.5",
    "joblib>=1.3",
    "scikit-learn>=1.3",
]

[tool.mypy]
python_version = "3.11"
packages = ["context_eng", "benchmarks"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "context_eng.config",
    "context_eng.ml.generate_labels",
    "context_eng.retrieval.anchor_inference",
    "context_eng.server",
]
disable_error_code = ["arg-type"]

[project.scripts]
context-eng-mcp = "context_eng.server:main"
context-eng-benchmark = "benchmarks.compare:main"
context-eng-ml-labels = "context_eng.ml.generate_labels:main"
context-eng-ml-train = "context_eng.ml.train_budget:main"
context-eng-ml-eval = "context_eng.ml.eval_rf:main"
context-eng-ml-viz-tree = "context_eng.ml.visualize_forest:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["context_eng*", "benchmarks*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
context_eng = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "benchmark: end-to-end token-reduction benchmark gate (may be slower)",
]
testpaths = ["tests"]
pythonpath = ["src", "."]
