[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-eng"
version = "0.1.0"
description = "Context Engineering MCP server: query-matched, budgeted context packs to reduce LLM token usage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.5"]
embeddings = [
    "sentence-transformers>=3.0",
]
swebench = [
    "datasets>=2.19",
    "tiktoken>=0.5",
]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "tiktoken>=0.5",
    "datasets>=2.19",
]

[tool.mypy]
python_version = "3.11"
packages = ["context_eng"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "context_eng.config",
    "context_eng.retrieval.anchor_inference",
    "context_eng.server",
]
disable_error_code = ["arg-type"]

[project.scripts]
context-eng-mcp = "context_eng.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["context_eng*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
context_eng = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
